# MyGmk

./: .gitignore  CMakeLists.txt  Gmk1.sln  README.md
cppsrc/: Board.cpp  Board.h  Common.h  ConsolePrt.h  Evaluation.h  Game.cpp  Game.h  GameData.h  Gmk1.cpp  Search.cpp  cppGmk.vcxproj  cppGmk.vcxproj.filters  packages.config
cppsrc/NN/: OpenCL.h  config.h
match/: Board.cpp  CMakeLists.txt  Game.cpp  match.cpp  match.vcxproj  match.vcxproj.filters
msvc/: Gmk1.sln
msvc/VS2017/: cppGmk.cbp  cppGmk.vcxproj  cppGmk.vcxproj.filters  match.cbp  match.vcxproj  match.vcxproj.filters  packages.config
